--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-src/ceres/test.ceres
-src/test.ceres
-test.ceres
+src/ceres/test.ceres*
+src/test.ceres*
+test.ceres*
 go.sum
 go.mod
 relations.png
