--- a/var/config/general.yaml
+++ b/var/config/general.yaml
@@ -7,5 +7,8 @@ version: "0"
 #        However, having such a link does allow you to store NOT wherever you want.
 path_to_not: "~/.notvar/"
 # where in the "var" directory the "pipe" directory is.
-# By default, this is dir'ectly in var.
+# By default, this is directly in var.
 path_to_pipe: "pipe/"
+# how many workers
+# By default (-1), this is the number of local cores.
+workers: -1
